<resources>
    <string name="app_name">StudyFix</string>
    <string name="pomodoro">pomodoro technique</string>
    <string name="timer">25:00</string>
    <string name="start_button">ابدأ الجلسة الدراسية</string>
    <string name="reset_button"><u>اعادة التوقيت</u></string>
    <string name="stop_button">ايقاف مؤقت</string>
    <string name="keep_going">استمر...</string>
    <string name="stop">ايقاف</string>
    <string name="contin">استمرار</string>
    <string name="stopTitleTv">ايقاف مؤقت...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_your_book">اعثر على كتابك</string>
    <string name="Grade_10">العاشر</string>
    <string name="grade_11">الأول ثانوي</string>
    <string name="grade_12">الثاني ثانوي</string>
    <string name="chapter_two">الفصل الثاني</string>
    <string name="chapter_one">الفصل الأول</string>
    <string name="english">English</string>
    <string name="grade_12_in_item">الصف: الثاني عشر</string>
    <string name="chapter_1_and_2">الفصل: الأول والثاني</string>
    <string name="math">رياضيات</string>
    <string name="grade_11_in_item">الصف: الحادي عشر</string>
    <string name="chapter_1">الفصل الأول</string>
    <string name="chapter_2">الفصل الثاني</string>
    <string name="physics">الفيزياء</string>
    <string name="geography">جغرافيا</string>
    <string name="it">تكنولوجيا</string>
    <string name="grade_10_in_item">الصف العاشر</string>
    <string name="all_branches">جميع الفروع</string>
    <string name="branch_sci_and_indu">علمي/صناعي</string>
    <string name="branch_literary">أدبي</string>
</resources>