<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_fragments_background"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/pomodoro"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/timerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        android:text="@string/timer"
        android:textSize="48sp"
        android:textColor="@color/white"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:indeterminateOnly="false"
        android:progress="100"
        android:progressDrawable="@drawable/pb_background"
        app:layout_constraintBottom_toBottomOf="@+id/timerTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerTv" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:backgroundTint="#B81313"
        android:textStyle="bold"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/resetTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/reset_button"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/stopTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/resetTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/stop"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/resumeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/resetTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/contin"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:visibility="gone"/>




</androidx.constraintlayout.widget.ConstraintLayout>

