<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageInItemDesign"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/book_english_12_ch0_sc"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/rounded_book"
        />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


        <TextView
            android:id="@+id/titleInItemDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/english"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            />

                <TextView
                    android:id="@+id/gradeInItemDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_12_in_item"
                    android:textColor="@color/grey_level2"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"/>


                <TextView
                    android:id="@+id/chapterInItemDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chapter_1_and_2"
                    android:textColor="@color/grey_level2"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:text="---------------------------------"
                    android:background="@color/black"
                    android:visibility="invisible"/>






            </LinearLayout>


            <TextView
                android:id="@+id/branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="الفرع"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="20dp"
                />

        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>