<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainFragments.BooksFragment"
    tools:theme="@style/Theme.MaterialComponents.Light"
    android:background="@drawable/main_fragments_background">
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true"

        >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/find_your_book"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            android:background="@color/white"
            />

    </com.google.android.material.card.MaterialCardView>



    <LinearLayout
        android:id="@+id/gradesLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialCardView"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        >

        <com.google.android.material.card.MaterialCardView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="0dp"
            android:elevation="0dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            >

            <TextView
                android:id="@+id/grade10"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Grade_10"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="0dp"
            android:elevation="0dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            >

            <TextView
                android:id="@+id/grade11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/grade_11"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="0dp"
            android:elevation="0dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            >

            <TextView
                android:id="@+id/grade12"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/grade_12"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradesLinear"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:layout_marginTop="6dp"
        android:paddingBottom="150dp"
        />







</androidx.constraintlayout.widget.ConstraintLayout>